# regex-accountant

./: .gitignore  LICENSE.md  QUERY.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
regex_accountant/: cli.py  fetcher_api.py  fetcher_utils.py  log.py  model.py  monkeypatch.py  persist.py  postprocess.py  query.lark  query.py  server.py  utils.py
regex_accountant/server_assets/: accountant.css
regex_accountant/server_assets/templates/: app.html  txn.html
