[tool.poetry]
name = "regex-accountant"
version = "0.1.0"
description = "Really stupid accounting tool. Uses regexes"
authors = ["Radian LLC <contact+regex-accountant@intuitiveexplanations.com>"]
readme = "README.md"
packages = [{include = "regex_accountant"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.44.0"
xdg-base-dirs = "^6.0.2"
pyyaml = "^6.0.3"
beautifulsoup4 = "^4.14.3"
lxml = "^6.1.1"
pdfminer-six = "^20260107"
dateparser = "^1.4.0"
curlinate = "^0.0.1"
flask = "^3.1.3"
mashumaro = "^3.22"
lark = "^1.3.1"
undetected-chromedriver = "^3.5.5"
browser-cookie3 = "^0.20.1"
requests = "^2.34.2"
setuptools = "^82.0.1"

[tool.poetry.scripts]
rac = "regex_accountant.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
